# dask-felleskomponenter

./: .gitignore  README.md  catalog-info.yaml  pyproject.toml  requirements.txt  setup.py
.github/chainguard/: dask-felleskomponenter.sts.yaml
.github/workflows/: lint.yml  pypi-publish.yml
src/dask_felleskomponenter/: __init__.py
src/dask_felleskomponenter/felleskomponenter/: sync_df_to_pgdb.py
src/dask_felleskomponenter/governance/: main.py
src/dask_felleskomponenter/governance/data_contract/: checks.py  validate.py
src/dask_felleskomponenter/tests/: test_table_validation.py
src/dask_felleskomponenter/udfs/: README.md  __init__.py  _base.py  udf_conversions.py  udf_tools.py
src/dask_felleskomponenter/udfs/geometry/: __init__.py  conversion.py  inspection.py  utils.py
src/dask_felleskomponenter/udfs/tests/: hoydekurver_registration_and_sql_tests.py  test_contours_udf.py  test_wkb_udfs.py  wkb_registration_and_sql_tests.py
